--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "hbs": "^4.1.1",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.4.16",
     "nodemon": "^2.0.6",
     "path": "^0.12.7"
   }
